Added show/hide button to password field on the login page

--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -19,3 +19,13 @@
 .header h1 {
     line-height: 0;
 }
+
+.passwordInputBox {
+    display: flex;
+    align-items: center;
+}
+
+.showPassword {
+    display: flex;
+    align-items: center;
+}
