--- a/styles/auth.module.css
+++ b/styles/auth.module.css
@@ -6,20 +6,15 @@
 }
 
 .signUpForm {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   border: 2px solid #304D6D;
   border-radius: 0.5rem;
   width: 100%;
   height: 26rem;
   max-width: 25rem;
-}
-
-.content {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 1rem;
-  height: 100%;
-  margin: 0 1rem;
+  padding: 1rem;
 }
 
 .heading {
@@ -45,6 +40,16 @@
   border-color: #00A6FF;
 }
 
-.submitButtonContainer {
+.submitContent {
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  gap: 0.4rem;
+}
+
+.divider {
+  width: 80%;
+  color: black;
 }
