--- a/styles/auth.module.css
+++ b/styles/auth.module.css
@@ -53,3 +53,15 @@
   width: 80%;
   color: black;
 }
+
+.errorBox {
+  background-color: rgba(255, 87, 87, 0.5);
+  display: flex;
+  align-items: center;
+  padding: 0.05rem 0.5rem;
+  height: 2.5rem;
+}
+
+.errorBox > p {
+  font-size: 10pt;
+}
