--- a/styles/auth.module.css
+++ b/styles/auth.module.css
@@ -2,19 +2,24 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: calc(100vh - 3rem);
 }
 
 .signUpForm {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  border: 2px solid #304D6D;
-  border-radius: 0.5rem;
   width: 100%;
-  height: 26rem;
+  max-height: 26rem;
   max-width: 25rem;
   padding: 1rem;
+}
+
+@media only screen and (max-width: 28rem),
+  only screen and (max-height: 35rem) {
+  .signUpForm {
+    border: none;
+  }
 }
 
 .heading {
@@ -50,8 +55,16 @@
 }
 
 .divider {
-  width: 80%;
-  color: black;
+  width: 100%;
+  height: 1px;
+  background-color: black;
+}
+
+.dividerDiv {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-size: 11pt;
 }
 
 .errorBox {
