Improved buttons and other things - Button ripple effects. - All buttons are now instances of the Button component - Reduced the salting parameter for password hashing - Users can no longer register an account if one of the fields are empty

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -11,26 +11,10 @@
   font-weight: 600;
 }
 
-.button {
-  background-color: transparent;
-  border: 1px solid #00A6FF;
-  border-radius: 7px;
-  color: white;
-  font-weight: 600;
-  height: 45px;
-  width: 100%;
-  transition: filter .08s;
-}
-
 .blackText {
   color: black;
 }
 
-.hlButton {
-  background-color: #00A6FF;
-}
-
-.button:hover {
-  cursor: pointer;
-  filter: brightness(120%);
+.whiteText {
+  color: white;
 }
