--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -11,16 +11,25 @@
 
 .headerGroup {
   display: flex;
-  gap: 1rem;
-  margin: 0 1rem;
+  margin-left: 0.5rem;
 }
 
 .headerGroup > a {
   color: black;
   text-decoration: none;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+  border-radius: 3px;
 }
 
 .headerGroup > a:hover {
   cursor: pointer;
   filter: opacity(80%);
+  background-color: #f2f2f2;
+}
+
+.active {
+  background-color: #f2f2f2;
 }
